# demo-tpl-py

./: .env.app.dev  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  backend.dockerfile  backend.dockerfile.dockerignore  backend_base.dockerfile  backend_base.dockerfile.dockerignore  backend_build_check.dockerfile  backend_build_check.dockerfile.dockerignore  backend_dev.dockerfile  backend_dev.dockerfile.dockerignore  pyproject.toml
doc/: demo-api.http  http-client.env.json
scripts/: check.sh  check_common.sh  docker-build-base.sh  docker-build-dev.sh  docker-build.sh  docker-check.sh  docker-run.sh  env_config.sh  format.sh  format_common.sh  init.sh  pre-commit  precommit_demo.sh  set-labels.sh  start.sh  test-api.sh  test-cov-html.sh  test-cov.sh  test-unit.sh  test.sh
src/: .env.app.dev  run_dev_server.py  run_server.py
src/app/: main.py
src/app/api/api_v1/: api.py  auth.py
src/app/api/api_v1/endpoints/: items.py  users.py
src/app/core/: config.py  security.py
src/app/schemas/: __init__.py  item.py  msg.py  token.py  user.py
tests/: conftest.py
tests/api/api_v1/: test_items.py  test_users.py
tests/unit/api/: conftest.py  test_api_config.py
tests/unit/api/api_v1/: test_auth.py  test_items.py  test_users.py
tests/unit/api/api_v1/endpoints/: test_root.py
tests/unit/core/: test_config.py
tests/utils/: utils.py
