[tool.black]
exclude = '(\.git|\.mypy_cache|\.venv)'
include = '\.pyi?$'
target-version = ['py38']
max-line-length = 88

[tool.isort]
profile = "black"

[tool.pylint.master]
extension-pkg-whitelist = ["pydantic"]
fail-under = "9"
ignore = [
    "config.py"
]

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.messages_control]
disable = "bad-whitespace, trailing-whitespace"

[tool.pylint.miscellaneous]
notes = "FIXME,XXX,TODO,TODO,fixme,todo,TODO:"

[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb --strict-markers"
junit_family = "xunit2"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
log_file_format = "%(asctime)s:%(name)s:%(funcName)s():%(levelname)s:%(message)s"
log_format = "%(asctime)s:%(name)s:%(funcName)s():%(levelname)s:%(message)s"
markers = [
    "unit: marks tests as unit tests",
    "api: marks tests as api tests",
    "integration: marks tests as integration with other components",
]
testpaths = ["tests"]

[tool.coverage.report]
omit = [
    "**/__init__.py",
    ".mypy_cache",
    "**/tests/*",
    "**/src/run_dev_server.py", # omit entry point files
]
show_missing = true

[tool.coverage.run]
omit = ["*/__init__.py", ".mypy_cache", ".reports", ".git"]

[tool.poetry]
name = "demo-tpl-py"
version = "0.1.0"
description = "Demo template for python backend"
authors = ["Stanislav Petrov <stanislav.i.petrov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
gunicorn = "^20.0.4"
environs = "^9.3.1"
pydantic = {extras = ["email"], version = "^1.8"}
requests = "^2.25.1"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
mypy = "^0.812"
pylint = "^2.7.2"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pydevd-pycharm = "~=203.7148.57"

[tool.poetry.scripts]
start-dev = "demo-tpl-py.run_dev_server:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
