[tool.black]
exclude = '(\.git|\.mypy_cache|\.venv)'
include = '\.pyi?$'
target-version = ['py311']
max-line-length = 88

[tool.isort]
profile = "black"

[tool.pylint.master]
extension-pkg-allow-list = ["pydantic"]
fail-under = "9"
ignore = [
]
load-plugins = ["pylint.extensions.no_self_use", "pylint_pydantic"]

[tool.pylint.format]
max-line-length = "88"

#[tool.pylint.messages_control]
#disable = "bad-whitespace, trailing-whitespace"

[tool.pylint.miscellaneous]
notes = "FIXME,XXX,TODO,TODO,fixme,todo,TODO:"

[tool.pylint.design]
min-public-methods = 1
#max-attributes = 8

[tool.pytest.ini_options]
addopts = "--strict-markers"
junit_family = "xunit2"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
log_file_format = "%(asctime)s:%(name)s:%(funcName)s():%(levelname)s:%(message)s"
log_format = "%(asctime)s:%(name)s:%(funcName)s():%(levelname)s:%(message)s"
markers = [
    "unit: marks tests as unit tests",
    "api: marks tests as api tests",
    "integration: marks tests as integration with other components",
]
testpaths = ["tests"]

[tool.coverage.report]
omit = [
    "**/__init__.py",
    ".mypy_cache",
    "**/tests/*",
    "**/src/run_server.py", # omit entry point files
]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "@abstractmethod",
]

[tool.coverage.run]
omit = ["*/__init__.py", ".mypy_cache", ".reports", ".git"]

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = "true"
disallow_untyped_defs = "true"
show_error_codes = "true"


[tool.poetry]
name = "demo-tpl-py"
version = "0.1.0"
description = "Demo template for python backend"
authors = ["Stanislav Petrov <stanislav.i.petrov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11.5"
fastapi = "^0"
uvicorn = "~0.23"
pydantic = {version = "^2.0.2", extras = ["email", "dotenv"]}
python-jose = {extras = ["cryptography"], version = "^3.3"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = "^0"
pydantic-settings = "^2.0.1"
ecs-logging = "^2.1.0"

[tool.poetry.group.dev.dependencies]
black = {version = "^23.1.0", extras = ["d"]}
isort = "^5.10.1"
mypy = "~1"
pylint = "^3.0.0"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pydevd-pycharm = ">=232.5150.120"
autoflake = "^2.0.0"
anyio = "^3.6.1"
pre-commit = "^3.3.2"
pylint-pydantic = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
